--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Skyrim-market</title>
   <base href="/">
   <meta name="viewport" content="width=1024">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
